--- a/frontend/src/style/main.css
+++ b/frontend/src/style/main.css
@@ -70,6 +70,9 @@ p {
   max-width: 1200px;
 }
 
+.slider-container {
+  overflow: hidden;
+}
 .slider-container .slider-wrapper {
   display: flex;
   width: 200vw;
