updated function dedicated to localstorage and user status hnadled

--- a/frontend/src/style/main.css
+++ b/frontend/src/style/main.css
@@ -8,8 +8,12 @@
   font-family: "Press Start 2P";
 }
 
-body {
+body,
+html {
   overflow: hidden;
+}
+
+body {
   background-color: #5c94fc;
   color: white;
   min-width: 400px;
