--- a/frontend/src/style/main.scss
+++ b/frontend/src/style/main.scss
@@ -74,15 +74,25 @@ p {
 }
 
 // slider
+
 .slider-container {
+  display: grid;
+  grid-template-rows: auto 1fr;
+  grid-template-columns: 100%;
   overflow: hidden;
   .slider-wrapper {
     display: flex;
     width: 200vw;
+    max-height: 100%;
+    overflow: hidden;
   }
   .slider-item {
     width: 100vw;
     transition: transform 0.3s;
+
+    .container {
+      height: 100%;
+    }
   }
 
   &.left-active {
@@ -213,8 +223,6 @@ p {
   position: relative;
   color: inherit;
   margin-inline: auto;
-  margin-top: 50px;
-  margin-bottom: 40px;
   height: 38px;
   width: 180px !important;
 
@@ -344,12 +352,17 @@ p {
   padding: 15px;
 }
 
+.allow-scroll-container {
+  display: grid;
+  grid-template-rows: auto 1fr;
+  height: calc(100vh - 120px);
+}
+
 .allow-scroll {
   overflow-y: auto;
   overflow-x: hidden;
-  height: 100vh;
-  max-height: calc(100vh - 190px);
   padding: 4px;
+  max-height: 100%;
   &::-webkit-scrollbar {
     width: 6px;
     height: 6px;
@@ -359,14 +372,6 @@ p {
   }
   &::-webkit-scrollbar-track {
     background-color: white;
-  }
-
-  &.tiny-allow-scroll {
-    max-height: calc(100vh - 300px);
-  }
-
-  &.minus-allow-scroll {
-    max-height: calc(100vh - 350px);
   }
 
   .bg-text-block {
