--- a/frontend/src/style/main.scss
+++ b/frontend/src/style/main.scss
@@ -361,8 +361,8 @@ p {
 .allow-scroll {
   overflow-y: auto;
   overflow-x: hidden;
-  padding: 4px;
-  max-height: 100%;
+  padding-inline: 4px; //used for buttons
+  height: 100%;
   &::-webkit-scrollbar {
     width: 6px;
     height: 6px;
