--- a/frontend/src/style/main.scss
+++ b/frontend/src/style/main.scss
@@ -157,6 +157,9 @@ p {
 .d-block {
   display: block;
 }
+.d-iblock {
+  display: inline-block;
+}
 .d-none {
   display: none;
 }
@@ -168,6 +171,16 @@ p {
 }
 .d-flex-column {
   flex-direction: column;
+}
+.d-flex-center {
+  justify-content: center;
+  align-items: center;
+}
+.d-flex-space-arround {
+  justify-content: space-around;
+}
+.d-flex-space-between {
+  justify-content: space-between;
 }
 .pos-r {
   position: relative;
@@ -461,7 +474,7 @@ input {
   background-size: 57px 58px;
   background-repeat: repeat;
   background-position: left bottom;
-  z-index: +1;
+  z-index: +100;
 
   nav {
     opacity: 0;
@@ -555,6 +568,32 @@ input {
 
 .info-window-text {
   color: black;
+}
+
+.camera-button-container {
+  position: absolute;
+  bottom: 120px;
+  left: calc(50% - 41px);
+  z-index: 11;
+  width: 82px;
+  height: 60px;
+  text-align: center;
+
+  img {
+    width: 100%;
+  }
+}
+.camera-popup {
+  background-color: $bluesky;
+  width: 100vw;
+  height: calc(100vh - 83px);
+  position: absolute;
+  z-index: -10;
+  top: 0;
+
+  &.active {
+    z-index: 10;
+  }
 }
 
 // Administration
