--- a/frontend/src/style/main.scss
+++ b/frontend/src/style/main.scss
@@ -17,7 +17,6 @@ html {
 body {
   background-color: $bluesky;
   color: white;
-  min-width: 400px;
 }
 a {
   color: inherit;
@@ -71,6 +70,9 @@ p {
 }
 .container-big {
   max-width: 1200px;
+}
+.container-small {
+  max-width: 700px;
 }
 
 // slider
@@ -176,7 +178,7 @@ p {
   justify-content: center;
   align-items: center;
 }
-.d-flex-space-arround {
+.d-flex-space-around {
   justify-content: space-around;
 }
 .d-flex-space-between {
@@ -186,6 +188,12 @@ p {
   position: relative;
 }
 
+.h-100 {
+  height: 100%;
+}
+.w-100 {
+  width: 100%;
+}
 // buttons
 
 .button,
@@ -572,27 +580,55 @@ input {
 
 .camera-button-container {
   position: absolute;
-  bottom: 120px;
+  bottom: 108px;
   left: calc(50% - 41px);
   z-index: 11;
   width: 82px;
   height: 60px;
   text-align: center;
-
-  img {
-    width: 100%;
-  }
 }
 .camera-popup {
-  background-color: $bluesky;
   width: 100vw;
-  height: calc(100vh - 83px);
+  height: 0;
   position: absolute;
   z-index: -10;
-  top: 0;
+  bottom: 82px;
+  background-color: $bluesky;
 
   &.active {
     z-index: 10;
+    height: calc(100vh - 82px);
+    opacity: 1;
+  }
+
+  .camera-popup-close-button {
+    position: absolute;
+    right: 12px;
+    top: 12px;
+    z-index: +1;
+    color: white;
+  }
+
+  .flash-popup {
+    position: absolute;
+    bottom: 38px;
+    left: calc(50% + 5px);
+    width: 10px;
+    height: 10px;
+    background-color: white;
+    z-index: -100;
+    opacity: 0;
+    transition: all 0.1s cubic-bezier(0.4, 0, 1, 1);
+
+    &.active {
+      width: 100%;
+      height: 100%;
+      left: 0;
+      bottom: 0;
+      z-index: +100;
+      opacity: 1;
+      transition: all 0.1s cubic-bezier(0.4, 0, 1, 1);
+    }
   }
 }
 
@@ -706,9 +742,6 @@ label {
 //// Responsive
 
 @media screen and (max-width: 766px) {
-  .admin-page .allow-scroll.tiny-allow-scroll {
-    max-height: calc(100vh - 410px);
-  }
 }
 
 @media screen and (min-width: 767px) {
