--- a/frontend/src/style/main.css
+++ b/frontend/src/style/main.css
@@ -203,8 +203,16 @@ p {
   height: 100%;
 }
 
+.vh-100 {
+  height: 100vh;
+}
+
 .w-100 {
   width: 100%;
+}
+
+.vw-100 {
+  width: 100vw;
 }
 
 .button,
@@ -432,6 +440,10 @@ p {
   width: calc(100% - 12px);
 }
 
+.has-two-children > div {
+  height: 50%;
+}
+
 label {
   display: block;
 }
@@ -563,6 +575,25 @@ input {
 }
 .burger-menu .burger-button.active:after {
   content: "Fermer";
+}
+
+.intro-container {
+  padding-bottom: 126px;
+}
+
+.ground {
+  position: absolute;
+  bottom: 0;
+  background-color: red;
+  height: 126px;
+  left: 0;
+  background-image: url("/src/assets/ground.png");
+  background-size: 63px;
+}
+
+.logo {
+  width: 100%;
+  max-width: 400px;
 }
 
 .exclamation-button {
