--- a/frontend/src/style/main.scss
+++ b/frontend/src/style/main.scss
@@ -191,8 +191,14 @@ p {
 .h-100 {
   height: 100%;
 }
+.vh-100 {
+  height: 100vh;
+}
 .w-100 {
   width: 100%;
+}
+.vw-100 {
+  width: 100vw;
 }
 // buttons
 
@@ -400,6 +406,12 @@ p {
   }
 }
 
+.has-two-children {
+  & > div {
+    height: 50%;
+  }
+}
+
 // form
 
 label {
@@ -552,6 +564,27 @@ input {
 }
 
 //// Pages
+
+// intro
+
+.intro-container {
+  padding-bottom: 126px;
+}
+
+.ground {
+  position: absolute;
+  bottom: 0;
+  background-color: red;
+  height: 126px;
+  left: 0;
+  background-image: url("/src/assets/ground.png");
+  background-size: 63px;
+}
+
+.logo {
+  width: 100%;
+  max-width: 400px;
+}
 
 // Home
 
