[ADD] clouds and verdure

--- a/frontend/src/style/main.scss
+++ b/frontend/src/style/main.scss
@@ -581,6 +581,49 @@ input {
   background-size: 63px;
 }
 
+.cloud {
+  background-image: url("/src/assets/cloud.png");
+  background-size: 100%;
+  background-repeat: no-repeat;
+  position: absolute;
+}
+
+.cloud-1 {
+  height: 49px;
+  width: 97px;
+  top: 30px;
+  left: 20px;
+}
+
+.cloud-2 {
+  height: 63px;
+  width: 125px;
+  right: 40px;
+  top: 380px;
+}
+
+.hill {
+  position: absolute;
+  height: 37px;
+  width: 96px;
+  top: calc(100% - 160px);
+  right: 30px;
+  background-image: url("/src/assets/hill.png");
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
+
+.bush {
+  position: absolute;
+  height: 32px;
+  width: 129px;
+  top: calc(100% - 160px);
+  left: 30px;
+  background-image: url("/src/assets/bush.png");
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
+
 .logo {
   width: 100%;
   max-width: 400px;
