--- a/frontend/src/style/main.scss
+++ b/frontend/src/style/main.scss
@@ -119,6 +119,10 @@ p {
   margin-inline: auto;
 }
 
+.ml-1 {
+  margin-left: 10px;
+}
+
 .mt-10 {
   margin-top: 10px;
 }
@@ -745,6 +749,10 @@ label {
   line-height: 1.5rem;
 }
 
+.error-message {
+  color: $dark-red;
+}
+
 // Account
 
 .score {
@@ -803,9 +811,9 @@ label {
         align-items: start;
         gap: 20px;
 
-        p {
-          // width: 50%;
-        }
+        // p {
+        //   // width: 50%;
+        // }
         img {
           margin-bottom: 0;
           max-width: 45%;
