--- a/frontend/src/style/main.css
+++ b/frontend/src/style/main.css
@@ -114,6 +114,10 @@ p {
   margin-inline: auto;
 }
 
+.ml-1 {
+  margin-left: 10px;
+}
+
 .mt-10 {
   margin-top: 10px;
 }
@@ -831,6 +835,10 @@ label {
   line-height: 1.5rem;
 }
 
+.error-message {
+  color: #8c2022;
+}
+
 .score img {
   width: 22px;
 }
@@ -861,6 +869,13 @@ label {
     display: flex;
     align-items: center;
     justify-content: space-between;
+  }
+  .admin-users .admin-item .admin-user,
+  .admin-streetarts .admin-item .admin-user,
+  .admin-artists .admin-item .admin-user {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 10px;
   }
   .admin-users .admin-item .admin-item-infos,
   .admin-streetarts .admin-item .admin-item-infos,
