finished point system + loader validations

--- a/frontend/src/style/main.css
+++ b/frontend/src/style/main.css
@@ -52,6 +52,10 @@ h1 {
   margin-block: 25px;
 }
 
+h4 {
+  line-height: 24px;
+}
+
 h5 {
   font-size: 14px;
   line-height: 18px;
@@ -64,6 +68,10 @@ p {
 
 .tiny-text {
   font-size: 10px;
+}
+
+.of-hidden {
+  overflow: hidden;
 }
 
 .container {
@@ -164,6 +172,10 @@ p {
 
 .mb-60 {
   margin-bottom: 60px;
+}
+
+.mr-30 {
+  margin-right: 30px;
 }
 
 .d-block {
@@ -503,6 +515,9 @@ input {
 .item-list #react-modal-image-img {
   width: calc(100% - 50px);
   max-width: 860px;
+  -o-object-fit: contain;
+  object-fit: contain;
+  aspect-ratio: auto;
 }
 .item-list .__react_modal_image__header a {
   line-height: 24px;
@@ -631,7 +646,7 @@ input {
   position: absolute;
   height: 32px;
   width: 129px;
-  top: calc(100% - 160px);
+  top: calc(100% - 158px);
   left: 30px;
   background-image: url("/src/assets/bush.png");
   background-size: 100%;
@@ -641,7 +656,7 @@ input {
   text-align: center;
   display: inline-block;
   font-weight: bold;
-  padding: 10px 0 10px 10px;
+  padding: 10px;
   background-color: lightgray;
   text-shadow:
     -1px -1px black,
