--- a/frontend/src/style/main.css
+++ b/frontend/src/style/main.css
@@ -551,7 +551,7 @@ input {
   border-right-width: 3px;
   left: -3px;
 }
-.item-list:hover {
+.select-street-art-list .item-list:hover {
   background-color: #f7d51d;
 }
 .item-list.active {
