--- a/frontend/src/style/main.scss
+++ b/frontend/src/style/main.scss
@@ -135,6 +135,10 @@ p {
   margin-left: 10px;
 }
 
+.ml-20 {
+  margin-left: 20px;
+}
+
 .mt-10 {
   margin-top: 10px;
 }
@@ -816,7 +820,7 @@ button {
 // Administration
 
 .container-extra-small {
-  max-width: 300px;
+  max-width: 400px;
 }
 .admin-split {
   display: flex;
