--- a/frontend/src/style/main.css
+++ b/frontend/src/style/main.css
@@ -182,6 +182,10 @@ p {
   margin-bottom: 60px;
 }
 
+.pb-60 {
+  padding-bottom: 60px;
+}
+
 .pl-0 {
   padding-left: 0;
 }
@@ -225,6 +229,10 @@ p {
 
 .d-flex-space-between {
   justify-content: space-between;
+}
+
+.d-flex-end {
+  justify-content: flex-end;
 }
 
 .d-flex-wrap {
