--- a/frontend/src/style/main.css
+++ b/frontend/src/style/main.css
@@ -248,7 +248,7 @@ p {
 }
 
 .vh-100 {
-  height: 100vh;
+  height: 100dvh;
 }
 
 .w-100 {
@@ -466,7 +466,7 @@ p {
 .allow-scroll-container {
   display: grid;
   grid-template-rows: auto 1fr;
-  height: calc(100vh - 168px);
+  height: calc(100dvh - 108px);
 }
 
 .allow-scroll {
@@ -637,7 +637,7 @@ textarea {
   position: absolute;
   z-index: -100;
   top: 25px;
-  height: calc(100vh - 107px);
+  height: calc(100dvh - 107px);
   width: 100%;
   text-align: center;
   display: flex;
@@ -654,7 +654,7 @@ textarea {
   text-decoration: underline;
 }
 .burger-menu.active {
-  height: calc(100vh - 25px);
+  height: calc(100dvh - 25px);
 }
 .burger-menu.active nav {
   opacity: 1;
@@ -699,7 +699,7 @@ textarea {
 }
 
 .has-plants {
-  height: calc(100vh - 83px);
+  height: calc(100dvh - 83px);
 }
 .has-plants:before {
   content: "";
@@ -839,7 +839,7 @@ button h4 {
 }
 .camera-popup.active {
   z-index: 10;
-  height: calc(100vh - 82px);
+  height: calc(100dvh - 82px);
   opacity: 1;
 }
 .camera-popup .camera-popup-close-button {
