--- a/frontend/src/style/main.scss
+++ b/frontend/src/style/main.scss
@@ -232,7 +232,7 @@ p {
   height: 100%;
 }
 .vh-100 {
-  height: 100vh;
+  height: 100dvh;
 }
 .w-100 {
   width: 100%;
@@ -428,7 +428,7 @@ p {
 .allow-scroll-container {
   display: grid;
   grid-template-rows: auto 1fr;
-  height: calc(100vh - 168px);
+  height: calc(100dvh - 108px);
 }
 
 .allow-scroll {
@@ -612,7 +612,7 @@ textarea {
     position: absolute;
     z-index: -100;
     top: 25px;
-    height: calc(100vh - 107px);
+    height: calc(100dvh - 107px);
     width: 100%;
     text-align: center;
 
@@ -633,7 +633,7 @@ textarea {
   }
 
   &.active {
-    height: calc(100vh - 25px);
+    height: calc(100dvh - 25px);
 
     nav {
       opacity: 1;
@@ -687,7 +687,7 @@ textarea {
 // Plants
 
 .has-plants {
-  height: calc(100vh - 83px);
+  height: calc(100dvh - 83px);
 
   &:before {
     content: "";
@@ -845,7 +845,7 @@ button {
 
   &.active {
     z-index: 10;
-    height: calc(100vh - 82px);
+    height: calc(100dvh - 82px);
     opacity: 1;
   }
 
