fixing dynamic allow-scroll height + input camera set up on environment camera instead of front camera

--- a/frontend/src/style/main.css
+++ b/frontend/src/style/main.css
@@ -729,7 +729,7 @@ textarea {
 .intro-container .cloud-1 {
   height: 49px;
   width: 97px;
-  top: 30px;
+  top: 5%;
   left: 20px;
   animation: moving-cloud1 100s linear infinite;
 }
@@ -737,7 +737,7 @@ textarea {
   height: 63px;
   width: 125px;
   right: 40px;
-  top: 380px;
+  bottom: -20%;
   animation: moving-cloud2 100s linear infinite;
 }
 .intro-container .hill {
